# arbitrage-engine

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
scripts/: benchmark.py  discover_triangles.py
src/arbitrage/: __init__.py  __main__.py
src/arbitrage/config/: __init__.py  constants.py  settings.py
src/arbitrage/core/: __init__.py  engine.py  event_bus.py  types.py
src/arbitrage/dashboard/: __init__.py  live_feed.py  multi_exchange_feed.py  server.py
src/arbitrage/exchange/: __init__.py  client.py  models.py  rate_limiter.py
src/arbitrage/execution/: __init__.py  executor.py  recovery.py  risk.py  signer.py
src/arbitrage/market/: __init__.py  orderbook.py  symbols.py  websocket.py
src/arbitrage/simulation/: __init__.py  engine.py  market.py
src/arbitrage/strategy/: __init__.py  calculator.py  graph.py  opportunity.py
src/arbitrage/telemetry/: __init__.py  logger.py  metrics.py  reporter.py
src/arbitrage/utils/: __init__.py  math.py  time.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_engine.py  test_execution.py  test_websocket.py
tests/mocks/: __init__.py  exchange.py  websocket.py
tests/unit/: __init__.py  test_calculator.py  test_graph.py  test_orderbook.py  test_risk.py  test_signer.py
