[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "arbitrage-engine"
version = "1.0.0"
description = "High-Frequency Triangular Arbitrage Engine for Binance"
authors = ["Tim"]
readme = "README.md"
license = "MIT"
packages = [{include = "arbitrage", from = "src"}]
keywords = ["crypto", "arbitrage", "trading", "binance", "hft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.scripts]
arbitrage = "arbitrage.__main__:main"
arbitrage-demo = "arbitrage.dashboard.server:main"

[tool.poetry.dependencies]
python = "^3.11"
uvloop = "^0.19.0"
aiohttp = {version = "^3.9.0", extras = ["speedups"]}
orjson = "^3.9.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
networkx = "^3.2"
fastapi = "^0.109.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}
websockets = "^12.0"
jinja2 = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
aioresponses = "^0.7.6"
mypy = "^1.8.0"
ruff = "^0.2.0"
pre-commit = "^3.6.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/arbitrage"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["uvloop", "networkx", "aiohttp.*", "fastapi.*", "uvicorn.*", "websockets.*", "orjson", "matplotlib.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", "__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PL",     # pylint
    "RUF",    # ruff-specific
    "ASYNC",  # flake8-async
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLW0603",  # Global statement (used intentionally in FastAPI server)
    "ERA001",   # Commented-out code
    "RUF006",   # Store reference to asyncio.create_task
]

[tool.ruff.lint.isort]
known-first-party = ["arbitrage"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002", "PLR2004", "SIM105", "TCH001"]
"src/arbitrage/dashboard/*" = ["E501", "ARG001", "SIM102", "SIM105", "SIM108", "SIM401", "RUF001"]
"src/arbitrage/telemetry/reporter.py" = ["E501"]
"src/arbitrage/telemetry/logger.py" = ["SIM108"]
"src/arbitrage/strategy/graph.py" = ["SIM109", "PLR1714"]
"src/arbitrage/strategy/calculator.py" = ["ARG002"]
"src/arbitrage/execution/*" = ["E501", "SIM102", "SIM108", "PLR0911"]
"src/arbitrage/market/symbols.py" = ["E501"]
"src/arbitrage/market/websocket.py" = ["SIM102", "SIM105"]
"src/arbitrage/simulation/*" = ["RUF012", "SIM105"]
